-Added command line setting --zxuno-initial-64k to allow loading a initial 64kb block in bootm mode, bypassing the normal boot rom

Improved TBBlue emulation:
-Added debug window to enable/disable individual sprites
-Added relative sprite type composite/unified on sprite navigator
-Added Sprites Debug memory zone

Fixed CPC bugs:
-Fixed vsync and hsync interrupts
-Fixed border colour
-Fixed AY chip register selection
-Fixed CRTC interrupts. After a CRTC interrupt with Z80 interrupts disabled, they were not fired when enabling Z80 interrupts
-Fixed setting bit 4 of the "Select screen mode and rom configuration" register of the Gate-Array and interrupt request

Fixed TBBlue bugs:
-Fixed relative sprites when anchor sprite is not visible
-Fixed relative sprites and negative coordinates
-Fixed relative unified sprites
-Fixed writing on divmmc memory when layer2 active
-Fixed detecting unified/composite sprites
-Fixed calculating pattern on 4 bpp sprites
-Fixed 4bpp sprites transparency


Fixed loading General Sound rom

Fixed segfaults on fileselector +3 DSK screen previews using Speedlock protected disks or bad disks


Version 9.1 - Toi Acid Game edition. 26 November 2020

Added pc speaker audio driver (for Linux only)
Added General Sound emulation
Added compile setting to disable networking functions
Added date & time field info to ZSF snapshots
Added configuration & command line setting to save keymap type
Added some file converters: from SNA, SP, Z80, P, ZSF to SCR 


Improved QL emulation:
-Added sound emulation
-Guessing of file name extension
-Show all registers on Debug CPU window
-Support ZSF snapshots

Improved TBBlue emulation:
-Added emulation of tbblue joystick type (register 5)
-Added sprite zoom emulation
-Added relative sprites emulation
-Added sprite clipping emulation

Improved ZX Desktop: 
-Added direct buttons, to access menu items
-Added devices buttons/icons, to show device activity and device configuration
-Added F-key to close all open menus